# covtobed

./: .base.cpp.un~  .gitignore  .osx.build.sh  .travis.yml  .ubuntu.build.sh  CLAUDE.md  COMPILING.md  CONTRIBUTING.md  Dockerfile  LICENSE  OptionParser.cpp  README.md  base.0.3  base.cpp  coverage.md  covtobed  interval.h  run.sh
.github/workflows/: c-cpp.yml  cmake-test.yml
Docker/: README.md  coverage
benchmark/: README.md  bedt_example2.bed  benchmark.sh  benchmark2_example1.csv  benchmark2_example2.md  benchmark_disk.sh  benchmark_disk_2.sh  benchmark_example1.csv  benchmark_example1.md  benchmark_example2.csv  benchmark_example2.md  benchmark_stream.sh  disk_file.sh  get_datasets.sh  sambamba.md  stream_file.sh  test.sh  test_16.csv  test_16.md  test_17.csv  test_17.md
benchmark/disk/: benchmark2_example1.md  benchmark2_example2.csv  benchmark_example1.csv  benchmark_example1.md  benchmark_example2.csv  benchmark_example2.md  benchmark_threads.md
benchmark/exome_chromosomes/: disk_HG00258.REF_chr1.md  disk_HG00258.REF_chr10.md  disk_HG00258.REF_chr11.md  disk_HG00258.REF_chr12.md  disk_HG00258.REF_chr13.md  disk_HG00258.REF_chr14.md  disk_HG00258.REF_chr15.md  disk_HG00258.REF_chr16.md  disk_HG00258.REF_chr17.md  disk_HG00258.REF_chr18.md  disk_HG00258.REF_chr19.md  disk_HG00258.REF_chr2.md  disk_HG00258.REF_chr20.md  disk_HG00258.REF_chr21.md  disk_HG00258.REF_chr22.md  disk_HG00258.REF_chr3.md  disk_HG00258.REF_chr4.md  disk_HG00258.REF_chr5.md  disk_HG00258.REF_chr6.md  disk_HG00258.REF_chr7.md  disk_HG00258.REF_chr8.md  disk_HG00258.REF_chr9.md  disk_HG00258.REF_chrEBV.md  disk_HG00258.REF_chrM.md  disk_HG00258.REF_chrX.md  disk_HG00258.REF_chrY.md  disk_HG00258.REF_unmapped.md
benchmark/exome_size/: disk_chr1.1000k.md  disk_chr1.100k.md  disk_chr1.10M.md  disk_chr1.150M.md  disk_chr1.2000k.md  disk_chr1.200k.md  disk_chr1.5000k.md  disk_chr1.500k.md  disk_chr1.50M.md  disk_chr1.md
benchmark/stream/: README.md  benchmarkStream_example1.csv  benchmarkStream_example1.md  benchmarkStream_example2.csv  benchmarkStream_example2.md  benchmark_example1.csv  benchmark_example1.md
binaries/: .build_ubuntu.sh.swp  .osx.build.sh  .ubuntu.build.sh  README.md  build_osx.sh  build_ubuntu.sh  covtobed  covtobed_debug  covtobed_mac  covtobed_mac_debug
docs/: _config.yml  examples.html  index.html  testing.html  usage-guide.html
docs/assets/: script.js  style.css
docs/images/: coverage_bam_to_bed.afdesign
example_data/: target.bed
paper/: paper.bib  paper.md
test/: CMakeLists.txt  README.md  TESTING_README.md  del.bam  demo.bam  demo.bed  duplicates.bam  filt.bam  filtered.bam  filtered_unsorted.bam  mock.bam  mock.bed  mp.bam  nano.bam  reads.fq  ref.fa  run_tests.sh  test.sam  test.sh  test_cov.bam
test/benchmark/: CMakeLists.txt  benchmark_coverage.cpp
test/data/synthetic/: coverage_pattern.sam  single_read.sam  stranded_test.sam  test_coverage.sam  test_coverage.sam.sam
test/integration/: test_enhanced.sh  test_helpers.sh
test/output/: README.md  bedtools.bed  covtobed.bed  sambamba.txt
test/unit/: CMakeLists.txt  test_coverage.cpp  test_intervals.cpp  test_main.cpp  test_output.cpp
test/utils/: CMakeLists.txt  simple_test_generator.sh  synthetic_bam_generator.cpp
